--- a/shop.monolithic-master/pom.xml
+++ b/shop.monolithic-master/pom.xml
@@ -4,7 +4,7 @@
 
   <modelVersion>4.0.0</modelVersion>
   <groupId>arwa</groupId>
-  <artifactId>shop.monolithic</artifactId>
+  <artifactId>shop.monolithic-master</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <properties>
     <compiler-plugin.version>3.10.1</compiler-plugin.version>
